--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  font-family: Helvetica Neue, Regular;
+  font-family: 'M PLUS 1', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: Helvetica Neue, Regular;
+  font-family: 'M PLUS 1', sans-serif;
 }
 
 * {
