--- a/src/components/home/home.styles.css
+++ b/src/components/home/home.styles.css
@@ -1,8 +1,3 @@
-body {
-  background-color: #DBDBDBE2;
-  overflow-x: hidden;
-  
-}
 
 .home-container {
   display: flex;
@@ -12,7 +7,13 @@ body {
   gap: 8px; /* Adds spacing between child elements */
   padding: 48px 0 0 56px; /* Sets padding instead of margin */
   max-width: 100%;
+  overflow-x: hidden;
 }
+
+.invasive-modification-body {
+  background-color: black;
+}
+
 
 .info-links {
   color: #afafaf;
