--- a/src/components/invasive-modification/insasive-modification.styles.css
+++ b/src/components/invasive-modification/insasive-modification.styles.css
@@ -3,11 +3,13 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  max-width: 100%;
+  max-width: 130%;
   min-height: 100vh;
-  /* margin-right: 1.25rem; */
+  margin-right: 5%;
   padding-bottom: 2.5rem; 
-  max-width: 100%;
+  
+  
+  
 }
 
 .insasiveModification-header {
@@ -40,7 +42,7 @@
 
 .img1 {
   position: absolute;
-  top: -2%;
+  top: -2.5%;
   left: 15%;
   width: 70%;
   height: auto;
@@ -66,6 +68,8 @@
   transform: translate(-50%, -50%);
   z-index: 1;
   padding-right: 1rem;
+  max-width: 60%;
+  
 }
 
 .card-images{
@@ -84,10 +88,35 @@
   width: 40%;
 }
 
+
+.carousel-bullets{
+  display: flex;
+  justify-content: center;
+  gap: 0.7rem;
+  width:100%;
+  
+  position: absolute;
+  left: -15%;
+  top: 155%;
+  z-index: 2;
+  
+}
+
+.carousel-bullet{
+  background-color: #afafaf;
+  border: none;
+  
+}
+
+.active-bullet{
+  background-color:#909090;
+  transform: scale(1.5);
+  
+}
 .card-text {
   position: absolute;
-  top: 120.5%;
-  left: 58%;
+  top: 121%;
+  left: 56%;
   color: #484848;
   right: 0;
   margin: 0 auto;
@@ -161,7 +190,7 @@
     width: 100%;
     max-width: 320px;
     margin: 2rem auto;
-    
+    cursor: pointer;
     margin-top: -18rem;
     padding-bottom: 0;
   }
@@ -187,3 +216,297 @@
   
 }
 
+@media only screen and (min-width: 1920px) {
+  .insasiveModification-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    max-width: 130%;
+    min-height: 100vh;
+    margin-right: 5%;
+    padding-bottom: 2.5rem; 
+    
+    
+    
+  }
+  
+  .insasiveModification-header {
+    font-size: 1.5rem;
+    width: 50%;
+    color: #484848;
+    margin-top: -18.1rem;
+    margin-left: 13rem;
+    font-weight: normal;
+  }
+  
+  .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-left: 2rem;
+  }
+  
+  .img-wrapper {
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .img1 {
+    position: absolute;
+    top: -4.8%;
+    left: 15%;
+    width: 100%;
+    height: auto;
+    z-index: 0;
+  }
+  
+  .video-text{
+    font-weight: normal;
+    font-size: 1.5rem;
+    color: #484848;
+    position: absolute;
+    top: 20%;
+    left: 100%;
+    z-index: 1;
+    text-align: end;
+    width: 60%;
+    
+  }
+  
+  .insasiveModification-video {
+    position: absolute;
+    top: 81.5%;
+    left: 122%;
+    z-index: 1;
+    max-width: 80%;
+    
+
+    
+    
+    
+    
+  }
+  
+  .card-images{
+    position: relative;
+    width: 50%;
+    top: 44rem;
+    margin-top: 7.5rem;
+    object-fit: cover;
+    /* margin-left: -4rem; */
+    left: 22%;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    z-index: 1;
+    padding-bottom:4rem;
+    cursor: pointer;
+  }
+  
+  
+  .carousel-bullets{
+    display: flex;
+    justify-content: center;
+    gap: 0.7rem;
+    width:120%;
+    
+    position: absolute;
+    left: -15%;
+    top: 170%;
+    z-index: 2;
+    
+  }
+  
+  .carousel-bullet{
+    background-color: #afafaf;
+    border: none;
+    
+  }
+  
+  .active-bullet{
+    background-color:#909090;
+    transform: scale(1.5);
+    
+  }
+  .card-text {
+    position: absolute;
+    top: 140.5%;
+    left: 73%;
+    color: #484848;
+    right: 0;
+    margin: 0 auto;
+    text-align: start;
+    z-index: 1;
+  }
+  
+  .line {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  
+  .name {
+    margin-right: 1rem;
+  }
+  
+  .category {
+    margin-left: 0;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
+  
+}
+/* 
+@media only screen and (min-width: 1280px) {
+  .insasiveModification-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    max-width: 60%;
+    min-height: 100vh;
+    margin-right: 5%;
+    padding-bottom: 2.5rem; 
+    
+    
+    
+  }
+  
+  .insasiveModification-header {
+    font-size: 0.9rem;
+    width: 41%;
+    color: #484848;
+    margin-top: -18rem;
+    margin-left: 12.5rem;
+    font-weight: normal;
+  }
+  
+  .img-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1rem;
+    margin-left: 2rem;
+  }
+  
+  .img-wrapper {
+    position: relative;
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .img1 {
+    position: absolute;
+    top: -4.8%;
+    left: 20%;
+    width: 80%;
+    height: auto;
+    z-index: 0;
+  }
+  
+  .video-text{
+    font-weight: normal;
+    font-size: 0.9rem;
+    color: #484848;
+    position: absolute;
+    top: 8%;
+    left: 93%;
+    z-index: 1;
+    text-align: end;
+    width: 60%;
+    
+  }
+  
+  .insasiveModification-video {
+    position: absolute;
+    top: 43%;
+    left: 115%;
+    z-index: 1;
+    max-width: 80%;
+    
+
+    
+    
+    
+    
+  }
+  
+  .card-images{
+    position: relative;
+    width: 50%;
+    top: 17rem;
+    margin-top: 7.5rem;
+    object-fit: cover;
+   
+    left: 15%;
+    margin-right: auto;
+    margin-bottom: 2rem;
+    z-index: 1;
+    padding-bottom:4rem;
+    cursor: pointer;
+  }
+  
+  
+  .carousel-bullets{
+    display: flex;
+    justify-content: center;
+    gap: 0.7rem;
+    width:120%;
+    
+    position: absolute;
+    left: -20%;
+    top: 130%;
+    z-index: 2;
+    
+  }
+  
+  .carousel-bullet{
+    background-color: #afafaf;
+    border: none;
+    
+  }
+  
+  .active-bullet{
+    background-color:#909090;
+    transform: scale(1.5);
+    
+  }
+  .card-text {
+    position: absolute;
+    top: 85%;
+    left: 67%;
+    color: #484848;
+    right: 0;
+    margin: 0 auto;
+    text-align: start;
+    z-index: 1;
+  }
+  
+  .line {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+  }
+  
+  .name {
+    margin-right: 1rem;
+  }
+  
+  .category {
+    margin-left: 0;
+    line-height: 1.5;
+    margin-bottom: 1rem;
+  }
+} */
