--- a/src/components/witness/witness.styles.css
+++ b/src/components/witness/witness.styles.css
@@ -17,7 +17,7 @@
   max-width: calc(100% - 3rem);
   /* line-height: 2; */
   letter-spacing: 0px;
-  padding-right: 0.5rem;
+  /* padding-right: 0.5rem; */
 }
 
 .witness-text1 {
@@ -118,4 +118,77 @@
  
   
 
+}
+
+@media only screen and (min-width: 1920px) {
+  .witness-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 80%;
+    margin: -18.875rem 0 0 10.625rem;
+    margin-bottom: 2rem;
+    
+  }
+  
+  
+  
+  .witness-texts {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: calc(100% - 3rem);
+    /* line-height: 2; */
+    letter-spacing: 0px;
+    /* padding-right: 0.5rem; */
+  }
+  
+  .witness-text1 {
+    margin-top: 0.938rem;
+    font-size: 0.938rem;
+    font-weight: normal;
+    width: 100%;
+  }
+  
+  .witness-text2 {
+    margin-top: 0.7rem;
+    width: 100%;
+    font-size: 0.938rem;
+    font-weight: normal;
+    line-height: 1.5;
+  }
+  
+  .video-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .video{
+    margin-left: 5.5%;
+    margin-top:  0.938rem;
+  }
+  
+  
+  
+  
+  .video-caption {
+    margin: 0.3rem 0 0;
+    text-align: center;
+    font-size: 12px;
+    font-weight: normal;
+    align-self: flex-end;
+    margin-right: 0.5%;
+  }
+  
+  .video-caption2 {
+    margin: 0;
+    text-align: center;
+    font-size: 12px;
+    font-weight: normal;
+    align-self: flex-end;
+    margin-right: 0.5%;
+    
+  }
+  
 }
