finished dead vase layout and got repo ready to test deploy on netlify

--- a/src/components/hyphen/Hyphen.styles.css
+++ b/src/components/hyphen/Hyphen.styles.css
@@ -2,6 +2,7 @@
     max-width: 100%;
     min-height: 100vh;
     padding-bottom: 2.5rem; 
+    pointer-events: none;
   }
   
   .hyphen-img-container {
