--- a/src/components/broken-city/broken-city.styles.css
+++ b/src/components/broken-city/broken-city.styles.css
@@ -121,8 +121,8 @@
  }
  
  .brojenimg4{
-     width: 100%;
-     margin-left: 4%;
+     width: 80%;
+     margin-left:15%;
  }
  
  
@@ -197,103 +197,398 @@
      }
    }
 
-   @media (max-width: 1024px) {
-    .text1 {
-      margin-left: 10%;
-      width: 80%;
-    }
-  
-    .brokenimg1 {
-      width: 100%;
-      margin-left: 0;
-    }
-  
-    .text2 {
-      width: 50%;
-      margin-right: 0;
-      margin-left: 25%;
-      align-items: flex-start;
-    }
-  
-    .broken-city-header2 {
-      margin-left: 0;
-      margin-top: 2rem;
-      width: 100%;
-      text-align: center;
-    }
-  
-    .text3-subtext {
-      width: 100%;
-    }
-  }
+   @media screen and (min-width: 1280px) and (max-width: 1366px){
+    .broken-city-container{
+      margin-right: 1.5rem;
+      pointer-events: none;
+   }
+   
+   .text1{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-top: -26.9%;
+       margin-left: 16%;
+       display: flex;
+       flex-direction: column;
+       width: 70%;
+       
+   }
+   
+   .broken-city-header{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
 
+       
+       
+   }
+   
+   .text1-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: -0.4rem;
+       width: 120%;
+   }
+   
+   .brokenimg1-container{
+       max-width: 100%;
+   }
+   
+   .brokenimg1{
+       width: 84%;
+       margin-left: 16%;
+       margin-top: 0.5%;
+   }
+   
+   .text2 {
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      justify-content: space-between;
+      align-items: center;
   
-  @media only screen and (max-width: 768px) {
-    .broken-city-container {
-    margin-right: 0;
-    padding: 0 1rem;
-    }
-    
-    .text1 {
-    margin-left: 0;
-    margin-top: 2rem;
-    width: 100%;
-    }
-    
-    .text1-subtext {
-    width: 100%;
-    }
-    
-    .brokenimg1 {
-    margin-left: 0;
-    margin-top: 2rem;
-    width: 100%;
-    }
-    
-    .text2 {
-    width: 100%;
-    align-items: flex-start;
-    margin-right: -50%;
-    }
-    
-    .broken-city-header2 {
-    margin-left: 20%;
-    margin-top: 2rem;
-    width: 100%;
-    }
-    
-    .text2-subtext {
-    width: 100%;
-    }
-    
-    .brokenimg3 {
-    width: 100%;
-    margin-top: 2rem;
-    }
-    
-    .brokenimg2 {
-    width: 100%;
-    margin-top: 2rem;
-    }
-    
-    .text3 {
-    width: 100%;
-    margin-top: 2rem;
-    }
-    
-    .broken-city-header3 {
-    width: 100%;
-    margin-top: 2rem;
-    }
-    
-    .text3-subtext {
-    width: 100%;
-    }
-    
-    .brojenimg4 {
-    width: 100%;
-    margin-top: 2rem;
-    }
+      margin-right: 2rem;
     }
    
+   .broken-city-header2{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 100%;
+       margin-top: 11%;
+       width: 70%;
+       margin-bottom: 1rem;
+       text-align: end;
+       
+   }
+  
+   .text2-subtext{
+      color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       width: 100%;
+       text-align: end;
+       margin-left: 70%;
+       margin-top: 0.9rem;
+   }
+   
+   .brokenimg3 {
+      width: 100%;
+      margin-top: -20%;
+      margin-left: 80%;
+     
+      
+    }
+   
+    .brokenimg2 {
+      
+      width: 100%;
+      margin-top: -160%;
+      margin-left: 290%;
+    }
+   
+   .text3{
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+       text-align: right;
+       margin-top: 15%;
+       text-align: left;
+       
+       
+   }
+   
+   .broken-city-header3{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 15%;
+       
+   }
+   
+   .text3-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: 0.7rem;
+       width: 85%;
+       margin-left: 15%;
+       margin-right: 1rem;
+   }
+   
+   .bottom-img-container{
+       width: 100%;
+   }
+   
+   .brojenimg4{
+       width: 80%;
+       margin-left:15%;
+      
+   }
+   
+
+   }
  
+   @media screen and (min-width: 1366px) and (max-width: 1366px){
+    .broken-city-container{
+      margin-right: 1.5rem;
+      pointer-events: none;
+   }
+   
+   .text1{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-top: -25%;
+       margin-left: 16%;
+       display: flex;
+       flex-direction: column;
+       width: 70%;
+       
+   }
+   
+   .broken-city-header{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+
+       
+       
+   }
+   
+   .text1-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: -0.4rem;
+       width: 120%;
+   }
+   
+   .brokenimg1-container{
+       max-width: 100%;
+   }
+   
+   .brokenimg1{
+       width: 84%;
+       margin-left: 16%;
+       margin-top: 0.5%;
+   }
+   
+   .text2 {
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      justify-content: space-between;
+      align-items: center;
+  
+      margin-right: 2rem;
+    }
+   
+   .broken-city-header2{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 100%;
+       margin-top: 11%;
+       width: 70%;
+       margin-bottom: 1rem;
+       text-align: end;
+       
+   }
+  
+   .text2-subtext{
+      color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       width: 100%;
+       text-align: end;
+       margin-left: 70%;
+       margin-top: 0.9rem;
+   }
+   
+   .brokenimg3 {
+      width: 100%;
+      margin-top: -20%;
+      margin-left: 80%;
+     
+      
+    }
+   
+    .brokenimg2 {
+      
+      width: 100%;
+      margin-top: -145%;
+      margin-left: 290%;
+    }
+   
+   .text3{
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+       text-align: right;
+       margin-top: 15%;
+       text-align: left;
+       
+       
+   }
+   
+   .broken-city-header3{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 15%;
+       
+   }
+   
+   .text3-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: 0.7rem;
+       width: 85%;
+       margin-left: 15%;
+       margin-right: 1rem;
+   }
+   
+   .bottom-img-container{
+       width: 100%;
+   }
+   
+   .brojenimg4{
+       width: 80%;
+       margin-left:15%;
+      
+   }
+   
+   }
+
+   @media only screen and (min-width: 1920px){
+    .broken-city-container{
+      margin-right: 1.5rem;
+      pointer-events: none;
+   }
+   
+   .text1{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-top: -17.8%;
+       margin-left: 14%;
+       display: flex;
+       flex-direction: column;
+       width: 70%;
+       
+   }
+   
+   .broken-city-header{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-bottom: 0.7rem;
+       
+   }
+   
+   .text1-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: 0.7rem;
+       width: 120%;
+   }
+   
+   .brokenimg1-container{
+       max-width: 100%;
+   }
+   
+   .brokenimg1{
+       width: 84%;
+       margin-left: 14%;
+       margin-top: 0.5%;
+   }
+   
+   .text2 {
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      justify-content: space-between;
+      align-items: center;
+  
+      margin-right: 2rem;
+    }
+   
+   .broken-city-header2{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 115%;
+       margin-top: 11%;
+       width: 70%;
+       margin-bottom: 1rem;
+       
+   }
+  
+   .text2-subtext{
+      color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       width: 100%;
+       text-align: end;
+       margin-left: 70%;
+       margin-top: 0.9rem;
+   }
+   
+   .brokenimg3 {
+      width: 100%;
+      margin-top: -20%;
+      margin-left: 60%;
+     
+      
+    }
+   
+    .brokenimg2 {
+      
+      width: 100%;
+      margin-top: -120%;
+      margin-left: 290%;
+    }
+   
+   .text3{
+       display: flex;
+       flex-direction: column;
+       width: 100%;
+       text-align: right;
+       margin-top: 5%;
+       text-align: left;
+       
+       
+   }
+   
+   .broken-city-header3{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1.25rem;
+       margin-left: 15%;
+       
+   }
+   
+   .text3-subtext{
+       color: #484848;
+       font-weight: normal;
+       font-size: 1rem;
+       margin-top: 0.7rem;
+       width: 85%;
+       margin-left: 15%;
+       margin-right: 1rem;
+   }
+   
+   .bottom-img-container{
+       width: 100%;
+   }
+   
+   .brojenimg4{
+       width: 80%;
+       margin-left:15%;
+   }
+   }
