--- a/src/components/dead-vase/dead-vase.styles.css
+++ b/src/components/dead-vase/dead-vase.styles.css
@@ -58,7 +58,7 @@
     margin-top: -111%;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
 
     .vase1-container {
       width: 100%;
@@ -86,5 +86,191 @@
       width: 100%;
       margin-top: 1rem;
     }
+  }
+
+  @media screen and (min-width: 1280px) and (max-width: 1366px){
+    .vase-container{
+      pointer-events: none;
+      max-width: 100%;
+      box-sizing: border-box;
+      padding: 1rem;
+  }
+  
+  .vase1-container{
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      margin-top: -26.8%;
+      margin-left: 14%;
+      
+  }
+  
+  
+  
+  .vase-text1{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 95%;
+      margin-top: -129.9%;
+      margin-left: 107%;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin-left: 107%;
+      margin-top: -82%;
+      z-index: 0;
+  }
+  
+  .vase3-container{
+      display: flex;
+      flex-direction: column;
+      width: 160%;
+      margin-left: 31%;
+      margin-top: -94%;
+      z-index: 1;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      
+      
+  }
+  
+  .vase-text2{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 55%;
+      margin-top: -111%;
+  }
+  }
+
+  @media screen and (min-width: 1366px) and (max-width: 1366px){
+    .vase-container{
+      pointer-events: none;
+      max-width: 100%;
+      box-sizing: border-box;
+      padding: 1rem;
+  }
+  
+  .vase1-container{
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      margin-top: -25%;
+      margin-left: 14%;
+      
+  }
+  
+  
+  
+  .vase-text1{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 95%;
+      margin-top: -129.9%;
+      margin-left: 107%;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin-left: 107%;
+      margin-top: -89.5%;
+      z-index: 0;
+  }
+  
+  .vase3-container{
+      display: flex;
+      flex-direction: column;
+      width: 160%;
+      margin-left: 32%;
+      margin-top: -90%;
+      z-index: 1;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      
+      
+  }
+  
+  .vase-text2{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 55%;
+      margin-top: -111%;
+  }
+  }
+
+  @media only screen and (min-width: 1920px){
+    .vase-container{
+      pointer-events: none;
+      max-width: 100%;
+      box-sizing: border-box;
+      padding: 1rem;
+  }
+  
+  .vase1-container{
+      display: flex;
+      flex-direction: column;
+      width: 40%;
+      margin-top: -17.5%;
+      margin-left: 10%;
+      
+  }
+  
+  
+  
+  .vase-text1{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 95%;
+      margin-top: -129.5%;
+      margin-left: 107%;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      margin-left: 107%;
+      margin-top: -105%;
+      z-index: 0;
+  }
+  
+  .vase3-container{
+      display: flex;
+      flex-direction: column;
+      width: 160%;
+      margin-left: 32%;
+      margin-top: -90%;
+      z-index: 1;
+  }
+  
+  .vase2-container{
+      display: flex;
+      flex-direction: column;
+      
+      
+  }
+  
+  .vase-text2{
+      color: #484848;
+      font-weight: normal;
+      font-size: 1rem;
+      width: 55%;
+      margin-top: -100%;
+  }
   }
 
