--- a/src/components/hyphen/Hyphen.styles.css
+++ b/src/components/hyphen/Hyphen.styles.css
@@ -34,3 +34,25 @@
       margin-left: 0;
     }
   }
+
+  @media (min-width: 1920px){
+    .hyphen-container {
+      max-width: 100%;
+      min-height: 100vh;
+      padding-bottom: 2.5rem; 
+      pointer-events: none;
+    }
+    
+    .hyphen-img-container {
+      max-width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .hyphen-img{
+      width: 80%;
+      margin-top: -28%;
+      margin-left: 10%;
+    }
+  }
