--- a/src/components/invasive-modification/insasive-modification.styles.css
+++ b/src/components/invasive-modification/insasive-modification.styles.css
@@ -17,7 +17,7 @@
   font-size: 1.25rem;
   width: 40%;
   color: #484848;
-  margin-top: -18.1rem;
+  margin-top: -19.8rem;
   margin-left: 13rem;
   font-weight: normal;
 }
@@ -364,28 +364,28 @@
   }
   
 }
-/* 
-@media only screen and (min-width: 1280px) {
+@media screen and (min-width: 1280px) and (max-width: 1366px){
   .insasiveModification-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    max-width: 60%;
+    max-width: 100%;
     min-height: 100vh;
     margin-right: 5%;
     padding-bottom: 2.5rem; 
-    
+    pointer-events: none;
+   
     
     
   }
   
   .insasiveModification-header {
-    font-size: 0.9rem;
-    width: 41%;
+    font-size: 1.25rem;
+    width: 40%;
     color: #484848;
-    margin-top: -18rem;
-    margin-left: 12.5rem;
+    margin-top: -19.5rem;
+    margin-left: 13rem;
     font-weight: normal;
   }
   
@@ -410,53 +410,50 @@
   
   .img1 {
     position: absolute;
-    top: -4.8%;
-    left: 20%;
-    width: 80%;
+    top: -2.5%;
+    left: 15%;
+    width: 60%;
     height: auto;
     z-index: 0;
   }
   
   .video-text{
     font-weight: normal;
-    font-size: 0.9rem;
+    font-size: 1.25rem;
     color: #484848;
     position: absolute;
-    top: 8%;
-    left: 93%;
+    top: 10%;
+    left: 59%;
     z-index: 1;
     text-align: end;
-    width: 60%;
-    
+    width: 50%;
   }
   
   .insasiveModification-video {
     position: absolute;
-    top: 43%;
-    left: 115%;
+    top: 50%;
+    left: 83%;
+    transform: translate(-50%, -50%);
     z-index: 1;
-    max-width: 80%;
-    
-
-    
-    
-    
+    padding-right: 1rem;
+    max-width: 55%;
     
   }
   
   .card-images{
     position: relative;
-    width: 50%;
-    top: 17rem;
+    width: 40%;
+    height: auto;
+    top: 30rem;
     margin-top: 7.5rem;
     object-fit: cover;
-   
+    /* margin-left: -4rem; */
     left: 15%;
     margin-right: auto;
     margin-bottom: 2rem;
     z-index: 1;
-    padding-bottom:4rem;
-    cursor: pointer;
+    padding-bottom: 50px;
+    width: 40%;
   }
   
   
@@ -464,11 +461,11 @@
     display: flex;
     justify-content: center;
     gap: 0.7rem;
-    width:120%;
+    width:100%;
     
     position: absolute;
-    left: -20%;
-    top: 130%;
+    left: -15%;
+    top: 155%;
     z-index: 2;
     
   }
@@ -486,8 +483,8 @@
   }
   .card-text {
     position: absolute;
-    top: 85%;
-    left: 67%;
+    top: 121%;
+    left: 56%;
     color: #484848;
     right: 0;
     margin: 0 auto;
@@ -510,5 +507,4 @@
     line-height: 1.5;
     margin-bottom: 1rem;
   }
-} */
-
+}
